--- a/QuanLyNhaHang/app/src/main/res/layout-land/dialog_notifi.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout-land/dialog_notifi.xml
@@ -31,7 +31,7 @@
         android:paddingTop="16dp">
 
         <Button
-            android:id="@+id/btn_cancle"
+            android:id="@+id/btn_cancel"
             style="@style/CommonButton"
             android:layout_width="0dp"
             android:layout_height="32dp"
