--- a/QuanLyNhaHang/app/src/main/res/layout/item_thuc_don_order.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout/item_thuc_don_order.xml
@@ -15,7 +15,7 @@
         android:src="@drawable/ic_food" />
 
     <TextView
-        android:id="@+id/tv_ten_mon"
+        android:id="@+id/tv_message"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
