--- a/QuanLyNhaHang/app/src/main/res/anim/fragment_enter.xml
+++ b/QuanLyNhaHang/app/src/main/res/anim/fragment_enter.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<alpha xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fromAlpha="0"
-    android:toAlpha="1"
-    android:duration="500"/>
+<set xmlns:android="http://schemas.android.com/apk/res/android">
+    <translate
+        android:duration="400"
+        android:fromXDelta="100%p"
+        android:toXDelta="0"/>
+
+    <alpha android:fromAlpha="1.0"
+        android:toAlpha="0"
+        android:duration="400"
+        android:startOffset="100"/>
+</set>
