--- a/QuanLyNhaHang/app/src/main/res/anim/fragment_exit.xml
+++ b/QuanLyNhaHang/app/src/main/res/anim/fragment_exit.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<alpha xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fromAlpha="1"
-    android:toAlpha="0"
-    android:duration="500"/>
+<set xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <translate
+        android:duration="400"
+        android:fromXDelta="0"
+        android:toXDelta="-100%p"/>
+
+    <alpha
+        android:duration="400"
+        android:fromAlpha="1.0"
+        android:startOffset="100"
+        android:toAlpha="1.0"/>
+
+</set>
