--- a/QuanLyNhaHang/app/src/main/res/layout-land/fragment_phuc_vu.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout-land/fragment_phuc_vu.xml
@@ -7,6 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:animateLayoutChanges="true"
         android:background="@color/colorBackgroudMain"
         android:orientation="horizontal"
         android:padding="@dimen/layout_padding">
@@ -16,7 +17,7 @@
             android:layout_height="match_parent"
             android:layout_marginRight="@dimen/layout_padding"
             android:layout_weight="2.9"
-            android:background="@color/colorBackgroudSesion"
+            android:background="@color/colorBackgroudFrame"
             android:orientation="vertical">
 
             <android.support.v7.widget.RecyclerView
@@ -101,17 +102,19 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/container_thong_tin_ban"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
-            android:background="@color/colorBackgroudSesion"
+            android:animateLayoutChanges="true"
+            android:background="@color/colorBackgroudFrame"
             android:orientation="vertical"
             android:padding="@dimen/layout_padding">
 
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical|end">
 
                 <ImageView
                     android:layout_width="77dp"
@@ -119,11 +122,12 @@
                     android:src="@drawable/logo_thong_tin_ban" />
 
                 <TextView
-                    android:id="@+id/tv_ten_ban"
-                    android:layout_width="130dp"
+                    android:id="@+id/tv_title"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:isScrollContainer="true"
                     android:lines="2"
+                    android:gravity="center_vertical"
                     android:paddingLeft="@dimen/margin"
                     android:scrollbars="vertical"
                     android:text="Bàn 15"
@@ -135,6 +139,8 @@
                     android:id="@+id/btn_thuc_don"
                     android:layout_width="47dp"
                     android:layout_height="28dp"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="16dp"
                     android:background="@drawable/ic_thuc_don" />
             </TableRow>
 
@@ -162,7 +168,7 @@
                 android:visibility="gone" />
 
             <include
-                layout="@layout/layout_dat_ban"
+                layout="@layout/layout_dat_ban_set_ban"
                 android:visibility="visible" />
 
             <include
