--- a/QuanLyNhaHang/app/src/main/res/layout-land/layout_thuc_don.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout-land/layout_thuc_don.xml
@@ -13,6 +13,7 @@
         android:layout_height="200dp" />
 
     <LinearLayout
+        android:id="@+id/container_thuc_don"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorBackgroudMain"
