--- a/QuanLyNhaHang/app/src/main/res/layout/dialog_tinh_tien.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout/dialog_tinh_tien.xml
@@ -7,7 +7,7 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/tv_ten_ban"
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Bàn 12"
@@ -183,7 +183,7 @@
             android:textColor="@color/white" />
 
         <Button
-            android:id="@+id/btn_cancle"
+            android:id="@+id/btn_cancel"
             android:layout_width="0dp"
             android:layout_height="32dp"
             android:layout_marginLeft="16dp"
