--- a/QuanLyNhaHang/app/src/main/res/layout/item_ban.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout/item_ban.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <TextView
-        android:id="@+id/tv_ten_ban"
+        android:id="@+id/tv_title"
         android:layout_width="65dp"
         android:layout_height="48dp"
         android:layout_margin="2dp"
