--- a/QuanLyNhaHang/app/src/main/res/layout/item_mon.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout/item_mon.xml
@@ -20,7 +20,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tv_ten_mon"
+            android:id="@+id/tv_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cà phê sữa"
