--- a/QuanLyNhaHang/app/src/main/res/menu/menu.xml
+++ b/QuanLyNhaHang/app/src/main/res/menu/menu.xml
@@ -9,6 +9,6 @@
         android:title="@string/sua_thong_tin" />
 
     <item
-        android:id="@+id/btn_cancle"
+        android:id="@+id/btn_cancel"
         android:title="@string/huy_ban" />
 </menu>
