--- a/QuanLyNhaHang/app/src/main/res/layout/activity_main.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
             android:textSize="12sp" />
 
         <Button
-            android:id="@+id/btn_statistic"
+            android:id="@+id/btn_thong_ke"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/menu_main_button_background"
