--- a/KhachHang/app/src/main/res/layout/dialog_confirm.xml
+++ b/KhachHang/app/src/main/res/layout/dialog_confirm.xml
@@ -43,7 +43,7 @@
             android:textColor="@color/colorTextButton" />
 
         <Button
-            android:id="@+id/btn_cancle"
+            android:id="@+id/btn_cancel"
             android:layout_width="0dp"
             android:layout_height="32dp"
             android:layout_marginLeft="16dp"
