--- a/KhachHang/app/src/main/res/layout/dialog_order_mon.xml
+++ b/KhachHang/app/src/main/res/layout/dialog_order_mon.xml
@@ -7,19 +7,24 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/tv_ten_ban"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bàn 12"
+        android:text="@string/goi_mon"
+        android:textColor="@color/colorPrimary"
         android:textSize="18sp"
+        android:paddingBottom="16dp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/tv_ten_mon"
+        android:id="@+id/tv_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Caffe"
+        android:isScrollContainer="true"
+        android:maxLines="2"
+        android:scrollbars="vertical"
+        android:text="Coffee"
+        android:textColor="@color/colorTextTenMon"
         android:textSize="16sp"
         android:textStyle="bold" />
 
@@ -31,13 +36,15 @@
         <ImageView
             android:id="@+id/iv_mon"
             android:layout_width="72dp"
-            android:layout_height="72dp" />
+            android:layout_height="72dp"
+            android:src="@drawable/ic_food" />
 
         <ImageButton
             android:id="@+id/btn_tru"
             android:layout_width="58dp"
             android:layout_height="58dp"
-            android:background="@null"/>
+            android:background="@null"
+            android:src="@drawable/ic_tru" />
 
         <EditText
             android:id="@+id/edt_so_luong"
@@ -47,23 +54,47 @@
             android:gravity="center_horizontal"
             android:inputType="number"
             android:lines="1"
-            android:text="15"
             android:maxLength="3"
-            android:textColor="@color/colorTextButton"
+            android:text="15"
+            android:textColor="@color/colorTextTitleDialog"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_don_vi_tinh"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
+            android:isScrollContainer="true"
+            android:scrollbars="horizontal"
             android:text="miếng"
+            android:textColor="@color/colorTextTenMon"
             android:textSize="12sp" />
 
         <ImageButton
             android:id="@+id/btn_cong"
             android:layout_width="58dp"
             android:layout_height="58dp"
-            android:background="@null"/>
+            android:background="@null"
+            android:src="@drawable/ic_cong" />
+    </TableRow>
+
+    <TableRow
+        android:layout_marginTop="4dp"
+        android:gravity="center_vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            style="@style/RatingBar" />
+
+        <TextView
+            android:id="@+id/tv_point_rating"
+            android:paddingLeft="4dp"
+            style="@style/CommonTextView"
+            android:typeface="serif"
+            android:textColor="@color/colorTextInfo"
+            android:textSize="9sp"
+            android:text="(15,3/6)" />
     </TableRow>
 
     <TableRow
@@ -73,23 +104,21 @@
 
         <Button
             android:id="@+id/btn_ok"
+            style="@style/CommonButton"
             android:layout_width="0dp"
             android:layout_height="32dp"
             android:layout_weight="1"
             android:background="@drawable/btn_radius"
-            android:text="Đồng ý"
-            android:textAllCaps="false"
-            android:textColor="@color/colorTextButton" />
+            android:text="@string/dong_y" />
 
         <Button
             android:id="@+id/btn_cancel"
+            style="@style/CommonButton"
             android:layout_width="0dp"
             android:layout_height="32dp"
             android:layout_marginLeft="16dp"
             android:layout_weight="1"
             android:background="@drawable/btn_radius"
-            android:text="Hủy"
-            android:textAllCaps="false"
-            android:textColor="@color/colorTextButton" />
+            android:text="@string/huy" />
     </TableRow>
 </LinearLayout>
