--- a/KhachHang/app/src/main/res/layout/item_mon_order.xml
+++ b/KhachHang/app/src/main/res/layout/item_mon_order.xml
@@ -32,9 +32,26 @@
             android:textSize="12sp"
             android:textStyle="bold" />
 
-        <RatingBar
-            android:id="@+id/ratingBar"
-            style="@style/RatingBar" />
+        <TableRow
+            android:layout_marginTop="4dp"
+            android:gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <RatingBar
+                android:id="@+id/ratingBar"
+                style="@style/RatingBar" />
+
+            <TextView
+                android:id="@+id/tv_point_rating"
+                android:paddingLeft="4dp"
+                style="@style/CommonTextView"
+                android:typeface="serif"
+                android:textSize="9sp"
+                android:textColor="@color/colorTextInfo"
+                android:text="(15,3/6)" />
+        </TableRow>
+
     </LinearLayout>
 
     <TextView
