--- a/QuanLyNhaHang/app/src/main/res/layout-land/dialog_order_mon.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout-land/dialog_order_mon.xml
@@ -13,6 +13,7 @@
         android:text="Bàn 12"
         android:textColor="@color/colorPrimary"
         android:textSize="18sp"
+        android:paddingBottom="16dp"
         android:textStyle="bold" />
 
     <TextView
@@ -75,6 +76,26 @@
             android:layout_height="58dp"
             android:background="@null"
             android:src="@drawable/ic_cong" />
+    </TableRow>
+
+    <TableRow
+        android:layout_marginTop="4dp"
+        android:gravity="center_vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            style="@style/RatingBar" />
+
+        <TextView
+            android:id="@+id/tv_point_rating"
+            android:paddingLeft="4dp"
+            style="@style/CommonTextView"
+            android:typeface="serif"
+            android:textColor="@color/colorTextInfo"
+            android:textSize="9sp"
+            android:text="(15,3/6)" />
     </TableRow>
 
     <TableRow
