--- a/KhachHang/app/src/main/res/layout/dat_ban_layout_include.xml
+++ b/KhachHang/app/src/main/res/layout/dat_ban_layout_include.xml
@@ -23,6 +23,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:descendantFocusability="beforeDescendants"
             android:orientation="vertical">
 
             <EditText
@@ -33,6 +34,8 @@
                 android:drawablePadding="8dp"
                 android:hint="@string/gio_den"
                 android:inputType="time"
+                android:focusable="false"
+                android:focusableInTouchMode="true"
                 android:maxLength="21"
                 android:maxLines="1"
                 android:textSize="12sp"
