--- a/QuanLyNhaHang/app/src/main/res/layout/dialog_them_mon.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout/dialog_them_mon.xml
@@ -32,19 +32,17 @@
                 <ImageView
                     android:id="@+id/iv_hinh_anh"
                     android:layout_width="120dp"
-                    android:layout_height="80dp"
-                    android:scaleType="centerCrop" />
+                    android:layout_height="80dp" />
 
             </RelativeLayout>
 
             <EditText
-                android:id="@+id/edt_tieu_de"
+                android:id="@+id/edt_ten_mon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:drawableLeft="@drawable/ic_news"
                 android:drawablePadding="8dp"
-                android:hint="@string/tieu_de"
+                android:hint="@string/ten_mon"
                 android:isScrollContainer="true"
                 android:lines="1"
                 android:maxLength="100"
@@ -55,34 +53,48 @@
         </TableRow>
 
         <EditText
-            android:id="@+id/edt_noi_dung"
+            android:id="@+id/edt_don_gia"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_note"
-            android:drawablePadding="8dp"
-            android:hint="@string/noi_dung"
-            android:inputType="textMultiLine"
-            android:isScrollContainer="true"
-            android:lines="5"
-            android:maxLength="500"
-            android:maxLines="5"
-            android:scrollbars="vertical"
+            android:layout_marginTop="8dp"
+            android:hint="@string/don_gia"
+            android:inputType="number"
+            android:maxLength="15"
+            android:maxLines="1"
             android:textSize="12sp"
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/edt_ngay_dang"
+            android:id="@+id/edt_don_vi_tinh"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:drawableLeft="@drawable/ic_time"
             android:drawablePadding="8dp"
-            android:hint="@string/ngay_dang"
+            android:hint="@string/don_vi_tinh"
             android:lines="1"
             android:maxLength="20"
             android:maxLines="1"
             android:textSize="12sp"
             android:textStyle="bold" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginTop="8dp">
+
+            <TextView
+                style="@style/CommonTextView"
+                android:text="@string/info_chon_nhom_mon"
+                android:textColor="@color/colorTextField"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/spn_nhom_mon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"></Spinner>
+
+        </TableRow>
+
 
         <CheckBox
             android:id="@+id/ckb_hien_thi"
